--- a/yaml/write.yaml
+++ b/yaml/write.yaml
@@ -1,18 +1,22 @@
-testinfo:
-    - id: test0003
-      title: 发布文章
-testcase:
-    - element_info: //android.view.View[@content-desc='请输入标题']
-      find_type: xpath
-      operate_type: set_value
-      text: pls input title
-    - element_info: //android.view.View[@content-desc='请输入正文']
-      find_type: xpath
-      operate_type: set_value
-      text: auto test msg
-    - element_info: com.jianshu.haruki:id/tv_publish
-      find_type: id
-      operate_type: click
-check:
-    - element_info: //android.widget.TextView[@text='好东西值得与更多好朋友分享，分享文章到你的社交帐号上吧！']
-      find_type: xpath
+---
+players:
+  Vladimir Kramnik: &kramnik
+    rating: 2700
+    status: GM
+  Deep Fritz: &fritz
+    rating: 2700
+    status: Computer
+  David Mertz: &mertz
+    rating: 1400
+    status: Amateur
+matches:
+  -
+    Date: 2002-10-04
+    White: *fritz
+    Black: *kramnik
+    Result: Draw
+  -
+    Date: 2002-10-06
+    White: *kramnik
+    Black: *fritz
+    Result: White
