--- a/yaml/history/HistoryDelAll.yaml
+++ b/yaml/history/HistoryDelAll.yaml
@@ -20,6 +20,6 @@ testcase:
       operate_type: click
       info: 确认清空
 check:
-    - element_info: //android.widget.TextView[@text='您尚未有阅读历史']
-      find_type: xpath
+    - element_info: com.huawei.works.knowledge:id/vlf_tv_tips
+      find_type: id
       info: 查找确认清空成功
