--- a/yaml/home/BannerHistory.yaml
+++ b/yaml/home/BannerHistory.yaml
@@ -7,7 +7,7 @@ testcase:
       find_type: id
       operate_type: click
       info: 点击banner图片
-    - element_info: //*[@id="h5-scroll"]/div[1]/div/section[2]/div[1]/div
+    - element_info: /html/head/title
       find_type: xpath
       operate_type: get_value
       is_webview: 1
