--- a/yaml/home/HomeSearchHistory.yaml
+++ b/yaml/home/HomeSearchHistory.yaml
@@ -17,13 +17,14 @@ testcase:
       msg: 最
       info: 输入搜索关键字最
     - press_keycode: 66 #回车
+      is_time: 1
       info: 回车
     - element_info: com.huawei.works.search:id/tv_knowledge_title
       find_type: ids
       index: 0
       operate_type: click
       info: 点击一条搜索的数据
-    - element_info: //*[@id="h5-scroll"]/div[1]/div/section[2]/div[1]/div
+    - element_info: /html/head/title
       find_type: xpath
       is_webview: 1 # 切换到webview
       operate_type: get_value
