--- a/yaml/home/HomeSwipeDown.yaml
+++ b/yaml/home/HomeSwipeDown.yaml
@@ -3,15 +3,14 @@ testinfo:
       title: 知识首页下拉刷新
       info: 打开知识
 testcase:
-#    - element_info: //android.widget.RadioButton[@text='知识']
-#      find_type: xpath
-#      operate_type: click # 点击操作
-#      info: 点击底部菜单的知识按钮
+    - element_info: com.huawei.works.knowledge:id/marquee_view
+      find_type: id
+      info: 检查页面加载完成
     - swipe: down # 下拉刷新
       info: 下拉刷新
-      is_time : 3 # 等待3秒
+      is_time: 3
 check:
     - element_info: //android.widget.ListView[1]/android.widget.LinearLayout[1]/android.widget.LinearLayout[1]
       find_type: xpath
-      check_time: 3 # 检测等待时间为2秒
+      check_time: 5 # 检测等待时间为2秒
       info: 查找下拉刷新按钮状态是否存在
