--- a/yaml/home/TechNotNull.yaml
+++ b/yaml/home/TechNotNull.yaml
@@ -3,10 +3,13 @@ testinfo:
       title: 知识页面技术专区卡片不为空检测
       info: 打开知识
 testcase:
-    - element_info: //*[@resource-id='com.huawei.works:id/w3_tab_content_layout']//android.widget.RadioButton[@text='知识']
-      find_type: xpath
-      operate_type: adb_tap
-      info: 点击知识
+#    - element_info: //*[@resource-id='com.huawei.works:id/w3_tab_content_layout']//android.widget.RadioButton[@text='知识']
+#      find_type: xpath
+#      operate_type: adb_tap
+#      info: 点击知识
+    - element_info: com.huawei.works.knowledge:id/marquee_view
+      find_type: id
+      info: 检查页面加载完成
     - element_info: com.huawei.works.knowledge:id/vtb_img_right2
       find_type: id
       operate_type: click
