--- a/yaml/weiqun/TeamDiscussHistory.yaml
+++ b/yaml/weiqun/TeamDiscussHistory.yaml
@@ -8,27 +8,30 @@ testcase:
       operate_type: click
       index: 0
       info: 点击测试微群
+    - element_info: com.huawei.works.knowledge:id/dzb_title_content
+      find_type: ids
+      index: 0
+      info: 查找页面加载完成
     - element_info: com.huawei.works.knowledge:id/fcc_btn_more
       find_type: id
       operate_type: click
       info: 点击新增tab按钮
-    - element_info: com.huawei.works.knowledge:id/rl_subscribe
-      find_type: ids
-      index: 1
-      operate_type: start
-      info: 得到第一个tab
     - element_info: //android.widget.TextView[@text='讨论原生']
       find_type: xpath
       operate_type: click
       info: 点击团队讨论的tab
-    - element_info: com.huawei.works.knowledge:id/dzb_title_content
+    - element_info: com.huawei.works.knowledge:id/dzb_title
+      find_type: ids
+      index: 0
+      operate_type: get_value
+      info: 得到团队讨论的第一条内容
+    - element_info: com.huawei.works.knowledge:id/dzb_title
       find_type: ids
       index: 0
       operate_type: click
       info: 点击团队讨论的第一条内容
-    - element_info: /html/head/title
-      find_type: xpath
-      operate_type: get_value
+    - element_info: h5-scroll
+      find_type: id
       is_webview: 1
       info: 得到详情页标题值
     - element_info: com.huawei.works.knowledge:id/vtb_img_left
