--- a/yaml/home/HomeSearchHistory.yaml
+++ b/yaml/home/HomeSearchHistory.yaml
@@ -16,18 +16,23 @@ testcase:
       operate_type: set_value # 输入内容
       msg: 最
       info: 输入搜索关键字最
-    - press_keycode: 66 #回车
+    - operate_type: press_keycode
+      code: 66
       is_time: 1
       info: 回车
     - element_info: com.huawei.works.search:id/tv_knowledge_title
       find_type: ids
       index: 0
+      operate_type: get_value
+      info: 获取第一条搜索的数据
+    - element_info: com.huawei.works.search:id/tv_knowledge_title
+      find_type: ids
+      index: 0
       operate_type: click
       info: 点击一条搜索的数据
-    - element_info: /html/head/title
-      find_type: xpath
+    - element_info: h5-scroll
+      find_type: id
       is_webview: 1 # 切换到webview
-      operate_type: get_value
       info: 查找详情页到标题
     - element_info: com.huawei.works.knowledge:id/vtb_img_left
       find_type: id
