--- a/yaml/home/HomeSwipeDown.yaml
+++ b/yaml/home/HomeSwipeDown.yaml
@@ -6,11 +6,11 @@ testcase:
     - element_info: com.huawei.works.knowledge:id/marquee_view
       find_type: id
       info: 检查页面加载完成
-    - swipe: down # 下拉刷新
+    - operate_type: swipe_down # 下拉刷新
       info: 下拉刷新
-      is_time: 3
+      is_time: 5
 check:
-    - element_info: //android.widget.ListView[1]/android.widget.LinearLayout[1]/android.widget.LinearLayout[1]
+    - element_info: //android.widget.ListView[1]/android.widget.LinearLayout[1]/android.widget.LinearLayout[1]/android.widget.TextView[@text='搜索热门博客、Hi团队']
       find_type: xpath
       check_time: 5 # 检测等待时间为2秒
-      info: 查找下拉刷新按钮状态是否存在
+      info: 下拉刷新按钮不存在
