--- a/yaml/home/HotAnswerHistory.yaml
+++ b/yaml/home/HotAnswerHistory.yaml
@@ -11,10 +11,10 @@ testcase:
       find_type: xpath
       operate_type: click
       info: 点击高悬赏问答
-    - element_info: com.huawei.works.knowledge:id/question
-      find_type: ids
-      index: 0
+    - element_info: //android.widget.ListView/android.widget.LinearLayout[1]
+      find_type: xpath
       operate_type: click
+      is_time: 5
       info: 点击数据列表第一条数据
     - element_info: /html/head/title
       find_type: xpath
