--- a/yaml/home/TechHistory.yaml
+++ b/yaml/home/TechHistory.yaml
@@ -14,10 +14,10 @@ testcase:
       index: 0
       operate_type: click
       info: 点击技术专区下对第一条数据
-    - element_info: /html/head/title
-      find_type: xpath
+    - element_info: h5-scroll
+      find_type: id
       is_webview: 1 # 切换到webview
-      info: 查找详情页到标题
+      info: 查找并获取详情页标题
     - element_info: com.huawei.works.knowledge:id/vtb_img_left
       find_type: id
       is_webview: 2 # 切换到native
