--- a/yaml/weiqun/SearchHistory.yaml
+++ b/yaml/weiqun/SearchHistory.yaml
@@ -8,6 +8,10 @@ testcase:
       operate_type: click
       index: 0
       info: 点击测试微群
+    - element_info: com.huawei.works.knowledge:id/dzb_title_content
+      find_type: ids
+      index: 0
+      info: 查找页面加载完成
     - element_info: com.huawei.works.knowledge:id/vtb_img_right2
       find_type: id
       operate_type: click
@@ -15,26 +19,28 @@ testcase:
     - element_info: com.huawei.works.knowledge:id/vs_et_search
       find_type: id
       operate_type: set_value # 输入内容
-      msg: wb
-      info: 输入搜索关键字最
+      msg: 案例
+      info: 输入搜索关键字案例
     - press_keycode: 66 #回车
+#      input: 1 # 特殊关键字，表示切换到默认输入法，现在默认写为百度华为输入法
+      is_time: 1
       info: 回车
-     - press_keycode: 66
-      info: 再次回车
-    - element_info: com.huawei.works.search:id/tv_knowledge_title
+#    - press_keycode: 84
+#      info: 再次回车
+    - element_info: //*[@resource-id='content-list-all']/android.view.View/android.view.View[4]
       find_type: ids
       index: 0
       operate_type: click
-      info: 点击一条搜索的数据
+      info: 点击搜索后的第3条数据
     - element_info: /html/head/title
       find_type: xpath
-      is_webview: 1 # 切换到webview
       operate_type: get_value
+      is_webview: 1
       info: 查找详情页到标题
     - element_info: com.huawei.works.knowledge:id/vtb_img_left
       find_type: id
-      is_webview: 2 # 切换到native
       operate_type: click
+      is_webview: 2
       info: 点击返回按钮
     - element_info: com.huawei.works.search:id/tv_searchview_cancel
       find_type: id
