--- a/yaml/weiqun/SendVote.yaml
+++ b/yaml/weiqun/SendVote.yaml
@@ -23,12 +23,12 @@ testcase:
     - element_info: com.huawei.works.knowledge:id/et_title
       find_type: id
       operate_type: set_value
-      msg: 投票标题的内容123456
+      msg: 周末测试活动安排
       info: 输入投票的标题
     - element_info: com.huawei.works.knowledge:id/et_content
       find_type: id
       operate_type: set_value
-      msg: 团队投票的内容123456
+      msg: 请问周末想去哪里玩11222221
       info: 输入投票的内容
     - element_info: com.huawei.works.knowledge:id/rl_category
       find_type: id
