--- a/yaml/weiqun/TeamIntro.yaml
+++ b/yaml/weiqun/TeamIntro.yaml
@@ -7,8 +7,11 @@ testcase:
       find_type: ids
       operate_type: click
       index: 0
-      is_time: 5
       info: 点击测试微群
+    - element_info: com.huawei.works.knowledge:id/dzb_title_content
+      find_type: ids
+      index: 0
+      info: 查找页面加载完成
     - element_info: com.huawei.works.knowledge:id/vtb_img_send
       find_type: id
       operate_type: click
