--- a/yaml/weiqun/TeamiMissHistory.yaml
+++ b/yaml/weiqun/TeamiMissHistory.yaml
@@ -8,6 +8,10 @@ testcase:
       operate_type: click
       index: 0
       info: 点击测试微群
+    - element_info: com.huawei.works.knowledge:id/dzb_title_content
+      find_type: ids
+      index: 0
+      info: 查找页面加载完成
     - element_info: com.huawei.works.knowledge:id/fcc_btn_more
       find_type: id
       operate_type: click
@@ -20,6 +24,7 @@ testcase:
       find_type: ids
       index: 0
       operate_type: click
+      is_time: 5
       info: 点击团队iMiss的第一条内容
     - element_info: /html/head/title
       find_type: xpath
